--- a/cappy/shifty/templates/shifty/index.html
+++ b/cappy/shifty/templates/shifty/index.html
@@ -1,35 +1,50 @@
 <!DOCTYPE html>
+    {% load static %}
 <html>
 <head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.min.css" rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.print.css" rel="stylesheet"/>
+
+<script>
+    $(function() {
+
+      // page is now ready, initialize the calendar...
+
+      $('#calendar').fullCalendar({
+        // put your options and callbacks here
+      })
+
+    });
+</script>
+<script>
+    $('#calendar').fullCalendar('next');
+    </script>
+<script>
+    $('#calendar').fullCalendar({
+  dayClick: function() {
+    alert('a day has been clicked!');
+  }
+});
+    </script>
 <style>
-table, th, td {
-    border: 1px solid black;
-}
 </style>
 </head>
+
+<title>Shifty</title>
+
+<link rel="stylesheet" type="text/css" href="{% static '/style.css' %}">
+</head>
 <body>
+<div id="calendar"></div>
 
-<h2>SHIFTY</h2>
-<h3>Weekly Schedule</h3>
-
-<table style="width:85%">
-  <tr>
-    <th>MONDAY</th>
-    <th>TUESDAY</th>
-    <th>WEDNESDAY</th>
-    <th>THURSDAY</th>
-    <th>FRIDAY</th>
-    <th>SATURDAY</th>
-    <th>SUNDAY</th>
-
-  </tr>
-  <!--<tr>-->
-    <!--<td></td>-->
-    <!--<td></td>-->
-    <!--<td></td>-->
-  <!--</tr>-->
-
-</table>
 
 </body>
 </html>
+
+
+
+
