--- a/cappy/shifty/static/style.css
+++ b/cappy/shifty/static/style.css
@@ -1,11 +1,7 @@
 html, body {
-  margin: 0;
-  padding: 0;
+  /*margin: 0;*/
+  /*padding: 0;*/
   font-family: "Lucida Grande",Helvetica,Arial,Verdana,sans-serif;
   font-size: 13px;
-}
-
-#calendar {
-  max-width: 85%;
-  margin: 40px auto;
+  background: grey;
 }
