--- a/cappy/shifty/static/style.css
+++ b/cappy/shifty/static/style.css
@@ -1,7 +1,5 @@
 html, body {
-  /*margin: 0;*/
-  /*padding: 0;*/
   font-family: "Lucida Grande",Helvetica,Arial,Verdana,sans-serif;
   font-size: 13px;
-  background: grey;
+  background-color: lightyellow;
 }
