--- a/cappy/shifty/templates/shifty/index.html
+++ b/cappy/shifty/templates/shifty/index.html
@@ -6,8 +6,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+
     <link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.min.css" rel="stylesheet"/>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.print.css" rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.print.css" rel="stylesheet" media="print"/>
 
 <script>
     $(function() {
@@ -15,29 +16,37 @@
       // page is now ready, initialize the calendar...
 
       $('#calendar').fullCalendar({
-        // put your options and callbacks here
+          header:{
+              left:"month, agendaWeek, agendaDay",
+              center:"title",
+              right:"today, prevYear, prev, next, nextYear"
+          },
+          buttonText: {
+              prevYear: new moment().year()-1,
+              nextYear: new moment().year()+1
+          },
+          viewRender: function (view) {
+              var y = moment($('#calendar').fullCalendar('getdate')).year();
+              $(".fc-prevYear-button").text(y-1);
+              $(".fc-nextYear-button").text(y+1);
+          },
+          minTime: "05:00:00",
+          maxTime: "22:00:00",
+          // themeSystem: 'bootstrap4'
+
       })
 
     });
 </script>
-<script>
-    $('#calendar').fullCalendar('next');
-    </script>
-<script>
-    $('#calendar').fullCalendar({
-  dayClick: function() {
-    alert('a day has been clicked!');
-  }
-});
-    </script>
+
 <style>
 </style>
 </head>
 
 <title>Shifty</title>
 
+<link rel="stylesheet" type="text/css" href="{% static '/themes.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static '/style.css' %}">
-</head>
 <body>
 <div id="calendar"></div>
 
