--- a/cappy/shifty/static/style.css
+++ b/cappy/shifty/static/style.css
@@ -1,5 +1,5 @@
 html, body {
   font-family: "Lucida Grande",Helvetica,Arial,Verdana,sans-serif;
   font-size: 13px;
-  background-color: lightyellow;
+  background-color: white;
 }
