--- a/cappy/shifty/templates/shifty/index.html
+++ b/cappy/shifty/templates/shifty/index.html
@@ -29,13 +29,14 @@
                $(".fc-prevYear-button").text(y-1);
                $(".fc-nextYear-button").text(y+1);
            },
-            defaultDate: '2016-09-12',
+            // defaultDate: '',
             navLinks: true,
             selectable: true,
             selectHelper: true,
             select: function(start, end) {
+                $('#starts-at').val(start.format('MM-DD-YYYY'));
+                $('#ends-at').val(start.format('MM-DD-YYYY'));
                 $('.modal').modal('show');
-
             },
             eventClick: function(event, element) {
                 $('.modal').modal('show');
@@ -52,8 +53,10 @@
 
         });
 
-
-        $("#starts-at, #ends-at").datetimepicker();
+        // https://github.com/Eonasdan/bootstrap-datetimepicker/
+        // https://jsfiddle.net/milz/fotLoLy9/
+        // $("#starts-at").datetimepicker();
+        // $("#ends-at").datetimepicker();
 
 
         $('#save-event').on('click', function() {
@@ -110,13 +113,13 @@
                 <div class="row">
                     <div class="col-xs-12">
                         <label class="col-xs-4" for="starts-at">Starting Time: </label>
-                        <input type="text" name="starts_at" id="starts-at" />
+                        <input type="datetime" placeholder="MM-DD-YYYY" name="starts_at" id="starts-at" />
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-xs-12">
                         <label class="col-xs-4" for="ends-at">Ending Time: </label>
-                        <input type="text" name="ends_at" id="ends-at" />
+                        <input type="datetime" placeholder="MM-DD-YYYY" name="ends_at" id="ends-at" />
                     </div>
                 </div>
             </div>
@@ -136,4 +139,7 @@
 
 
 </body>
+<script>
+
+</script>
 </html>
