--- a/cappy/shifty/templates/shifty/index.html
+++ b/cappy/shifty/templates/shifty/index.html
@@ -6,7 +6,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
-
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.min.css" rel="stylesheet"/>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.print.css" rel="stylesheet" media="print"/>
 
@@ -34,8 +34,9 @@
             selectable: true,
             selectHelper: true,
             select: function(start, end) {
-                $('#starts-at').val(start.format('MM-DD-YYYY'));
-                $('#ends-at').val(start.format('MM-DD-YYYY'));
+                $('#starts-at').val(start.format('MM/DD/YYYY'));
+
+                $( "#ends-at" ).datepicker();
                 $('.modal').modal('show');
             },
             eventClick: function(event, element) {
@@ -90,8 +91,9 @@
 
 </head>
 <link rel="stylesheet" type="text/css" href="{% static '/bstheme.css' %}">
- <body>
 
+
+ <body>
 
 <div id='calendar'></div>
 <div id='datepicker'></div>
@@ -113,13 +115,13 @@
                 <div class="row">
                     <div class="col-xs-12">
                         <label class="col-xs-4" for="starts-at">Starting Time: </label>
-                        <input type="datetime" placeholder="MM-DD-YYYY" name="starts_at" id="starts-at" />
+                        <input type="datetime" placeholder="MM/DD/YYYY" name="starts_at" id="starts-at" />
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-xs-12">
                         <label class="col-xs-4" for="ends-at">Ending Time: </label>
-                        <input type="datetime" placeholder="MM-DD-YYYY" name="ends_at" id="ends-at" />
+                        <input type="datetime" placeholder="MM/DD/YYYY" name="ends_at" id="ends-at" />
                     </div>
                 </div>
             </div>
