--- a/cappy/shifty/templates/shifty/index.html
+++ b/cappy/shifty/templates/shifty/index.html
@@ -10,7 +10,20 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.min.css" rel="stylesheet"/>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.print.css" rel="stylesheet" media="print"/>
 
-    <script>
+
+        <style>
+            .ui-datepicker-prev {
+                background-color: green;
+                margin-right: 10%;
+
+        }
+              .ui-datepicker-prev:hover {
+                cursor: pointer;
+
+        }
+
+        </style>
+        <script>
 
  $(document).ready(function() {
 
@@ -53,11 +66,6 @@
                eventLimit: true
 
         });
-
-        // https://github.com/Eonasdan/bootstrap-datetimepicker/
-        // https://jsfiddle.net/milz/fotLoLy9/
-        // $("#starts-at").datetimepicker();
-        // $("#ends-at").datetimepicker();
 
 
         $('#save-event').on('click', function() {
@@ -114,13 +122,13 @@
                 </div>
                 <div class="row">
                     <div class="col-xs-12">
-                        <label class="col-xs-4" for="starts-at">Starting Time: </label>
+                        <label class="col-xs-4" for="starts-at">Starting Day: </label>
                         <input type="datetime" placeholder="MM/DD/YYYY" name="starts_at" id="starts-at" />
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-xs-12">
-                        <label class="col-xs-4" for="ends-at">Ending Time: </label>
+                        <label class="col-xs-4" for="ends-at">Ending Day: </label>
                         <input type="datetime" placeholder="MM/DD/YYYY" name="ends_at" id="ends-at" />
                     </div>
                 </div>
