--- a/cappy/shifty/templates/shifty/index.html
+++ b/cappy/shifty/templates/shifty/index.html
@@ -13,7 +13,7 @@
 
         <style>
             .ui-datepicker-prev {
-                background-color: green;
+                background-color: teal;
                 margin-right: 10%;
 
         }
@@ -21,7 +21,15 @@
                 cursor: pointer;
 
         }
+            .ui-datepicker-next {
+                background-color: teal;
+                margin-right: 10%;
 
+        }
+              .ui-datepicker-next:hover {
+                cursor: pointer;
+
+        }
         </style>
         <script>
 
