--- a/cappy/shifty/templates/shifty/index.html
+++ b/cappy/shifty/templates/shifty/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-    {% load static %}
+{% load static %}
 <html>
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -7,109 +7,140 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.min.css" rel="stylesheet"/>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.print.css" rel="stylesheet" media="print"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.print.css" rel="stylesheet"
+          media="print"/>
 
 
-        <style>
-            .ui-datepicker-prev {
-                background-color: teal;
-                margin-right: 10%;
-
-        }
-              .ui-datepicker-prev:hover {
-                cursor: pointer;
+    <style>
+        .ui-datepicker-prev {
+            background-color: teal;
+            margin-right: 10%;
 
         }
-            .ui-datepicker-next {
-                background-color: teal;
-                margin-right: 10%;
+
+        .ui-datepicker-prev:hover {
+            cursor: pointer;
 
         }
-              .ui-datepicker-next:hover {
-                cursor: pointer;
+
+        .ui-datepicker-next {
+            background-color: teal;
+            margin-right: 10%;
 
         }
-        </style>
-        <script>
 
- $(document).ready(function() {
+        .ui-datepicker-next:hover {
+            cursor: pointer;
 
-        $('#calendar').fullCalendar({
-            header: {
-                left: 'prev,next',
-                center: 'title',
-                right: 'prevYear, nextYear, month,agendaWeek,agendaDay'
-            },
-            buttonText: {
-               prevYear: new moment().year()-1,
-               nextYear: new moment().year()+1
-           },
-           viewRender: function (view) {
-               var y = moment($('#calendar').fullCalendar('getDate')).year();
-               $(".fc-prevYear-button").text(y-1);
-               $(".fc-nextYear-button").text(y+1);
-           },
-            // defaultDate: '',
-            navLinks: true,
-            selectable: true,
-            selectHelper: true,
-            select: function(start, end) {
-                $('#starts-at').val(start.format('MM/DD/YYYY'));
+        }
 
-                $( "#ends-at" ).datepicker();
-                $('.modal').modal('show');
-            },
-            eventClick: function(event, element) {
-                $('.modal').modal('show');
-                $('.modal').find('#title').val(event.title);
-                $('.modal').find('#starts-at').val(event.start);
-                $('.modal').find('#ends-at').val(event.end);
+        #ui-datepicker-div {
+            background-color: #111111;
+        }
+    </style>
+    <script>
 
-            },
+        $(document).ready(function () {
 
-               minTime: "05:00:00",
-               maxTime: "22:00:00",
-               editable: true,
-               eventLimit: true
+            $('#calendar').fullCalendar({
+                header: {
+                    left: 'prev,next',
+                    center: 'title',
+                    right: 'prevYear, nextYear, month,agendaWeek,agendaDay'
+                },
+                buttonText: {
+                    prevYear: new moment().year() - 1,
+                    nextYear: new moment().year() + 1
+                },
+                viewRender: function (view) {
+                    var y = moment($('#calendar').fullCalendar('getDate')).year();
+                    $(".fc-prevYear-button").text(y - 1);
+                    $(".fc-nextYear-button").text(y + 1);
+                },
+                // defaultDate: '',
+                navLinks: true,
+                selectable: true,
+                selectHelper: true,
+                select: function (start, end) {
+                    $('#title').val('');
+                    $('#starts-at').val(start.format('MM/DD/YYYY'));
+                    $('#ends-at').val(start.format('MM/DD/YYYY'));
 
-        });
+                    $("#starts-at").datepicker();
+                    $("#ends-at").datepicker();
+                    $('.modal').modal('show');
+                },
+                eventClick: function (event, element) {
+                    $('.modal').modal('show');
+                    $('.modal').find('#title').val(event.title);
+                    $('.modal').find('#starts-at').val(event.start);
+                    $('.modal').find('#ends-at').val(event.end);
+
+                },
+
+                minTime: "05:00:00",
+                maxTime: "22:00:00",
+                editable: true,
+                eventLimit: true
+
+            });
+
+             // do ajax post using axios to the save_day_off django view
+                // pass the event data as a javascript object
+                // check the terminal to make sure the view successfully received the data
+
+                // save the data to the database
+                // check the admin panel make sure it's there
 
 
-        $('#save-event').on('click', function() {
-            var title = $('#title').val();
-            if (title) {
-                var eventData = {
+
+
+            $('#save-event').on('click', function () {
+                let title = $('#title').val();
+                let start_date = $('#starts-at').val()
+                let end_date = $('#ends-at').val()
+
+
+                axios.post('shifty/save_day_off') ({
                     title: title,
-                    start: $('#starts-at').val(),
-                    end: $('#ends-at').val()
-                };
-                $('#calendar').fullCalendar('renderEvent', eventData, true);
-            }
-            $('#calendar').fullCalendar('unselect');
+                    start_date: start_date,
+                    end_date: end_date
+                })
+                .then(function (response) {
+                    console.log(response);
+                })
+                .catch(function (error) {
+                    console.log(error);
+                });
 
-            // Clear modal inputs
-            $('.modal').find('input').val('');
 
-
-            $('.modal').modal('hide');
+                if (title) {
+                    var eventData = {
+                        title: title,
+                        start: start_date,
+                        end: end_date,
+                        allDay: true
+                    };
+                    $('#calendar').fullCalendar('renderEvent', eventData, true);
+                }
+                $('#calendar').fullCalendar('unselect');
+                $('.modal').modal('hide');
+            });
         });
-    });
-
-
-
 
 
     </script>
-<head>
-    <meta charset="UTF-8">
-    <title>Shifti</title>
+    <head>
+        <meta charset="UTF-8">
+        <title>Shifti</title>
 
-</head>
-<link rel="stylesheet" type="text/css" href="{% static '/bstheme.css' %}">
+    </head>
+    <link rel="stylesheet" type="text/css" href="{% static '/bstheme.css' %}">
 
 
- <body>
+<body>
 
 <div id='calendar'></div>
 <div id='datepicker'></div>
@@ -118,26 +149,27 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span>
+                </button>
                 <h4 class="modal-title">Create new event</h4>
             </div>
             <div class="modal-body">
                 <div class="row">
                     <div class="col-xs-12">
                         <label class="col-xs-4" for="title">User Name: </label>
-                        <input type="text" name="title" id="title" />
+                        <input type="text" name="title" id="title"/>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-xs-12">
                         <label class="col-xs-4" for="starts-at">Starting Day: </label>
-                        <input type="datetime" placeholder="MM/DD/YYYY" name="starts_at" id="starts-at" />
+                        <input type="datetime" placeholder="MM/DD/YYYY" name="starts_at" id="starts-at"/>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-xs-12">
                         <label class="col-xs-4" for="ends-at">Ending Day: </label>
-                        <input type="datetime" placeholder="MM/DD/YYYY" name="ends_at" id="ends-at" />
+                        <input type="datetime" placeholder="MM/DD/YYYY" name="ends_at" id="ends-at"/>
                     </div>
                 </div>
             </div>
@@ -148,12 +180,6 @@
         </div>
     </div>
 </div>
-
-
-
-
-
-
 
 
 </body>
